Logo squishing fixed

--- a/src/Components/App/Title/Title.scss
+++ b/src/Components/App/Title/Title.scss
@@ -23,6 +23,7 @@
     img {
       width: 50vw;
       max-width: 700px;
+      min-width: 404px;
     }
   }
 
